--- a/package.json
+++ b/package.json
@@ -2,20 +2,31 @@
   "name": "kinoko",
   "version": "0.0.1",
   "description": "Kinoko Project",
-  "main": "dist/index.js",
+  "main": "build/server/entry.js",
   "scripts": {
-    "build": "webpack --progress"
+    "build-server": "gulp",
+    "build-client": "webpack --progress",
+    "debug-serve": "npm run build-client && gulp debug-serve",
+    "debug-watch-client": "webpack --progress --watch"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.0.36",
     "clean-webpack-plugin": "^0.1.16",
     "expose-loader": "^0.7.3",
+    "gulp": "^3.9.1",
+    "gulp-live-server": "0.0.31",
+    "gulp-typescript": "^3.2.1",
     "phaser": "^2.6.2",
     "ts-loader": "^0.8.2",
     "tslint": "^5.5.0",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.4.1",
-    "webpack": "^2.7"
+    "webpack": "^2.7",
+    "webpack-node-externals": "^1.6.0"
+  },
+  "dependencies": {
+    "express": "^4.15.3"
   }
 }
