--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -6,5 +6,8 @@
       "skipLibCheck": true,
       "strict": true,
       "target": "es5"
-    }
+    },
+    "exclude": [
+      "**/*.json"
+    ]
   }
