--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/debug": "0.0.30",
     "@types/express": "^4.0.36",
     "clean-webpack-plugin": "^0.1.16",
     "expose-loader": "^0.7.3",
@@ -26,6 +27,7 @@
     "webpack": "^2.7"
   },
   "dependencies": {
+    "debug": "^3.0.1",
     "express": "^4.15.3"
   }
 }
